add crud methods, test for get
