# apiserver/src/routes/users.ts
@@ -10,7 +10,10 @@ users.put("/", controllerWrap(UserController.create));
 /** Delete a user */
 users.delete("/:userId", controllerWrap(UserController.delete));
 
-/** Get user data */
-users.get("/:userId", controllerWrap(UserController.get))
+/** Get all user data */
+users.get("/", controllerWrap(UserController.getAll));
+
+/** Get logged user data */
+users.get("/:userId", controllerWrap(UserController.get));
 
 export default users;
